fix mobile overflow

--- a/static-build/shared/styles/body.css
+++ b/static-build/shared/styles/body.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 *:focus-visible {
